Fixed scroll bars not being visible

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -52,8 +52,8 @@
 
 html {
     background: var(--primary-background);
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
 body {
